--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,7 +36,7 @@ jobs:
           gpg --import .gnupg/*
           mkdir -p .well-known/openpgpkey
           cd .well-known
-          gpg --list-options show-only-fpr-mbox  -k @lenka.moe | gpg-wks-client -v --install-key
+          gpg --list-options show-only-fpr-mbox  -k @lenka.moe | /usr/lib/gnupg/gpg-wks-client -v --install-key
           cp -rv openpgpkey/*/* openpgpkey/
           cd ..
       - name: Prepare fiels
